# constraint-theory-core

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TASK.md
.github/workflows/: ci.yml
benches/: core_benchmarks.rs
docs/: BENCHMARKS.md  CRATES_IO_METADATA_GAP.md  PERFORMANCE.md  TUTORIAL.md
docs/research-notes/: CONVERGENCE-PAPER-DRAFT.md  CROSS_ECOSYSTEM_TESTS.md  DEPLOYMENT.md  ECOSYSTEM.md  INTEGRATION.md  MASTER_SCHEMA.md  PAPER-V2-ADDITIONS.md  PRODUCTION_READINESS.md  RESEARCH_FOUNDATIONS.md
examples/: basic.rs  batch.rs  bench.rs  bench_comparison.rs  bench_profiled.rs  full_integration.rs  simd.rs
memory/: JOURNAL.md
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
reviews/: 2026-05-17-contributing-added.md
src/: ac3.rs  backtracking.rs  cache.rs  cdcl.rs  csp.rs  dcs.rs  hidden_dimensions.rs  holonomy.rs  lib.rs  manifold.rs  puzzle.rs  quantizer.rs  simd.rs  sudoku.rs
tests/: cross_repo_integration.rs.disabled  integration_tests.rs  module_coverage_tests.rs
wasm/: Cargo.toml  README.md  index.d.ts  index.js
wasm/src/: lib.rs
