[package]
name = "constraint-theory-core"
version = "2.2.0"
edition = "2021"
rust-version = "1.75"
description = "Deterministic manifold snapping with O(log n) KD-tree indexing — maps continuous vectors to exact Pythagorean coordinates"
authors = ["SuperInstance Team"]
license = "MIT"
repository = "https://github.com/purplepincher/constraint-theory-core"
documentation = "https://docs.rs/constraint-theory-core"
homepage = "https://github.com/purplepincher/constraint-theory-core"
readme = "README.md"
keywords = ["geometry", "kdtree", "csp", "sudoku", "floating-point"]
categories = ["algorithms", "mathematics", "science::robotics", "game-development"]
exclude = [
    "target/*",
    ".github/*",
    ".git/*",
]

[dependencies]

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "core_benchmarks"
harness = false

[features]
default = []
simd = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
